Дополнить функциональность historyManager